sdo/eclipselink.sdo.test/resource/org/eclipse/persistence/testing/sdo/helper/classgen/invalidtypename/org/example/InvalidClassname1.java
package org.example;

public interface InvalidClassname1 extends java.io.Serializable {

   public java.util.List getEmail();

   public void setEmail(java.util.List value);

   public java.util.List getPhone();

   public void setPhone(java.util.List value);

   public java.lang.String getCustID();

   public void setCustID(java.lang.String value);


}

